# qwen-api-node

./: .env.example  .gitignore  Cargo.toml  README.md  custom_rest_api.py  go.mod  go.sum  models.json  package-lock.json  package.json  pnpm-lock.yaml  wahwei+4-key.pem  wahwei+4.pem  webui.wahwei+6-key.pem  webui.wahwei+6.pem
.github/: mock-release.json
.github/workflows/: python-publish.yml
cmd/qwen-cli/: main.go
go-qwen-api/: client.go  prompts.go  qwen.go
scripts/: detect_changed.py
src/: client.rs  lib.rs  main.rs  types.rs
src/core/: prompts.ts
